# sage-tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  quickstart.sh  ruff.toml
src/sage/tools/: __init__.py  _version.py  arxiv_paper_searcher.py  arxiv_searcher.py  bocha_searcher.py  duckduckgo_searcher.py  image_captioner.py  mcp_server.py  nature_news_fetcher.py  text_detector.py  url_text_extractor.py
tests/: test_mcp_server.py  test_tools_smoke.py
